alignment fix

--- a/_include/css/main.css
+++ b/_include/css/main.css
@@ -15,6 +15,12 @@ div label {
 	margin-top: 15px;
 }
 
+#alignedrow {
+	position: absolute;
+	bottom: 0;
+	margin-bottom: 150px;
+}
+
 #mainlogo {
 	margin-left: auto;
 	margin-right: auto;
@@ -105,7 +111,9 @@ h3 {
 }
 
 #bottomright {
-	float:right;
+	position: absolute;
+	bottom: 0;
+	margin-bottom: 60px;
 	margin-right: 25px;
 }
 
